# mobileflow

./: .gitignore  CLAUDE.md  package.json  pnpm-lock.yaml  project.code-workspace  tsconfig.base.json
.claude/: settings.local.json
.docs/: index.md  project_api_runs_in_wsl.md  project_inline_publish_design.md  project_ios_pipeline_overhaul.md  project_provision_id_upload_followup.md  project_store_destinations_followups.md  stuff.md
apps/api/: .env.example  drizzle.config.ts  package.json  tsconfig.build.json  tsconfig.json
apps/api/scripts/: dev.mjs  wipe-certificates.ts
apps/api/src/: env.ts  server.ts
apps/api/src/auth/: csrf.ts  deviceToken.ts  middleware.ts  oauth.ts  password.ts  session.ts
apps/api/src/billing/: stripe.ts
apps/api/src/db/: client.ts  schema.ts  seed.ts
apps/api/src/lib/: crypto.ts  oauthLog.ts  safePath.ts  sanitize.ts
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/docs/: package.json  rspack.config.cjs  tsconfig.json
apps/docs/public/: index.html
apps/docs/src/: App.tsx  main.tsx
apps/web/: package.json  rspack.config.cjs  tailwind.config.cjs  tsconfig.json
apps/web/public/: index.html
apps/web/scripts/: dev.mjs
apps/web/src/: App.tsx  globals.d.ts  main.tsx  platform.ts  runtimes.tsx
infra/.docker/: dev.yml
infra/scripts/: deploy-build-scripts.mjs  dev-nuke.mjs  dev-up.mjs  silence-deprecations.cjs  uploadXim.mjs
(+152 files in other folders)
