[package]
name = "mobileflow-desktop"
version = "0.0.0"
description = "MobileFlow Desktop"
authors = ["MobileFlow"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "mobileflow_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
